# jarvis-voice

./: .gitignore  README.md  audio.py  config.py  diagnose_mic.sh  face.py  faces.txt  jarvis-simple.py  jarvis.conf  jarvis.py  jarvis.sh  mic_test.m4a  pyproject.toml  requirements.txt  stt.py  test.m4a  test2.m4a  test_l.m4a  test_stt.sh  torch.whl  torchaudio.whl  tts.py  tui.py  vad_chunk.m4a  vad_test_chunk.m4a  wakeword.py
